--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <title>GitHub page as PWA template</title>
     <link
       rel="canonical"
-      href="https://conor-otoole.github.io/ICS2O-PWA-Test/"
+      href="https://conor-otoole.github.io/ICS2O-Unit-5-07/"
     />
-    <link rel="manifest" href="/ICS2O-PWA-Test/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS2O-Unit-5-07/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
-    <link
+   <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       media="none"
@@ -45,31 +45,42 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first PWA</title>
+  <title>Calculating Natural Numbers</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">My first PWA</span>
+          <span class="mdl-layout-title">Natural numbers</span>
         </div>
       </header>
       <main class="mdl-layout__content">
-        <p></p>
-        <img
-          src="./images/notebook-animation.svg"
-          alt="Computer"
-          width="25%"
-          height="25%"
-        />
+        <p>Formula: Sn = (n ÷ 2) x (n + 1)</p>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <div
+            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+          >
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="number-input"
+            />
+            <label class="mdl-textfield__label" for="number-input"
+              >Insert a value:</label
+            >
+            <span class="mdl-textfield__error">This is not a number</span>
+          </div>
+        </form>
         <p></p>
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="myButtonClicked()"
         >
-          Say "Hello, World!"
+          Calculate
         </button>
         <!-- basic text -->
         <p></p>
